ldap-ui/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap-ui-service
  namespace: ldap-ui
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: ldap-ui
